major fix: implement full-stack authentication system, booking management, and service catalog modules